--- a/src/controllerview/sample.fxml
+++ b/src/controllerview/sample.fxml
@@ -21,5 +21,6 @@
       <Button layoutX="323.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#Next" prefHeight="58.0" prefWidth="150.0" text="&gt;&gt;" />
       <TextField fx:id="name" layoutX="172.0" layoutY="30.0" prefHeight="42.0" prefWidth="302.0" promptText="Name" />
       <Text fx:id="page" layoutX="237.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0/0" />
+      <Button layoutX="323.0" layoutY="178.0" mnemonicParsing="false" onMouseClicked="#onlyNumbers" prefHeight="0.0" prefWidth="150.0" text="to only write numbers" />
    </children>
 </AnchorPane>
